--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -3,8 +3,6 @@ name: Feature Request
 description: Suggest a new feature for Gmail Cleaner
 title: "[Feature]: "
 labels: ["enhancement"]
-assignees:
-  - Gururagavendra
 body:
   - type: markdown
     attributes:
@@ -14,26 +12,11 @@ body:
   - type: textarea
     id: problem
     attributes:
-      label: Problem / Use Case
-      description: What problem does this feature solve? What's your use case?
+      label: Feature Idea
+      description: What feature would you like to see? What problem does it solve?
       placeholder: I want to be able to...
     validations:
       required: true
-
-  - type: textarea
-    id: solution
-    attributes:
-      label: Proposed Solution
-      description: How would you like this to work?
-      placeholder: It would be great if...
-    validations:
-      required: true
-
-  - type: textarea
-    id: alternatives
-    attributes:
-      label: Alternatives Considered
-      description: Have you considered any alternative solutions or workarounds?
 
   - type: dropdown
     id: priority
