--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 services:
   gmail-cleaner:
     # Option 1: Multi-arch image: works natively on both AMD64 and ARM64 (Apple Silicon)
-    # image: ghcr.io/gururagavendra/gmail-cleaner:latest
-    # pull_policy: always
+    image: ghcr.io/gururagavendra/gmail-cleaner:latest
+    pull_policy: always
 
     # Option 2: Build locally (uncomment below, comment out image above)
-    build: .
+    # build: .
 
     ports:
       - "8766:8766"  # Web UI
